--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/loginreg.css">
+    <link rel="stylesheet" href="./loginres.css">
     
     <title>Document</title>
 </head>
@@ -18,9 +18,9 @@
             <label for="password">Password:</label>
             <div class="input">  <input type="password" id="password" name="password" required>   </div>
             <br>
-            <a href="/frontend/1.html" class="button"><span class="bp">Register</span></a>
+            <a href="./register.html" class="button"><span class="bp">Register</span></a>
         </form>
-        <p>Already have an account? <a href="/Frontend/login.html">Login here</a></p>
+        <p>Already have an account? <a href="./login.html">Login here</a></p>
 
     </div>
     
