--- a/Index.html
+++ b/Index.html
@@ -43,6 +43,12 @@
       </div>
     </div>
 
+    <!-- NUEVO: Barra de búsqueda -->
+    <div class="input-group mb-3">
+      <span class="input-group-text bg-transparent border-end-0"><i class="bi bi-search"></i></span>
+      <input id="search-input" type="text" class="form-control border-start-0" placeholder="Buscar tarea…" autocomplete="off"/>
+    </div>
+
     <!-- Card principal de acciones -->
     <div class="card shadow-sm border-0 mb-3">
       <div class="card-body p-3 p-lg-4">
@@ -119,6 +125,52 @@
       <i class="bi bi-emoji-neutral fs-3 d-block mb-2"></i>
       No hay tareas todavía.
     </div>
+
+    <!-- NUEVO: Formulario de encuesta -->
+    <div class="card shadow-sm border-0 mt-5">
+      <div class="card-body p-4">
+        <h2 class="h5 mb-3"><i class="bi bi-ui-checks me-2 text-primary"></i>Encuesta</h2>
+        <form>
+          <div class="row g-3 mb-3">
+            <div class="col-md-6">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" id="nombre" class="form-control" required>
+            </div>
+            <div class="col-md-6">
+              <label for="apellido" class="form-label">Apellido</label>
+              <input type="text" id="apellido" class="form-control" required>
+            </div>
+          </div>
+
+          <div class="row g-3 mb-3">
+            <div class="col-md-6">
+              <label for="curso" class="form-label">Curso</label>
+              <input type="text" id="curso" class="form-control">
+            </div>
+            <div class="col-md-6">
+              <label for="materia" class="form-label">Materia</label>
+              <input type="text" id="materia" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="satisfaccion">
+            <label class="form-check-label" for="satisfaccion">
+              Estoy satisfecho con la aplicación
+            </label>
+          </div>
+
+          <div class="mb-3">
+            <label for="comentario" class="form-label">Comentario</label>
+            <textarea id="comentario" class="form-control" rows="3"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-success">
+            <i class="bi bi-send me-1"></i>Enviar encuesta
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
 
   <!-- Bootstrap 5 JS -->
@@ -143,3 +195,4 @@
   </script>
 </body>
 </html>
+
