--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,24 @@
   <link rel="stylesheet" href="stylesheet.css">
 
   <meta name="color-scheme" content="light dark">
+  <!-- ===== Encabezado del sitio ===== -->
+<header class="site-header" role="banner">
+  <div class="header-inner">
+    <a href="#" class="brand" aria-label="Inicio">
+      <!-- Cambia este texto por el nombre real de tu proyecto -->
+      Hakaton
+    </a>
+
+    <nav class="auth-actions" aria-label="Acciones de autenticación">
+      <a id="btn-login" class="btn-auth outline" href="./login.html">Inicio de sesion</a>
+      <a id="btn-login" class="btn-auth outline" href="./register.html">Resgitro</a>
+    </nav>
+  </div>
+</header>
+<!-- ===== Fin encabezado ===== -->
+
 </head>
+
 <body>
   <div class="container py-4">
 
