--- a/login.html
+++ b/login.html
@@ -17,11 +17,11 @@
             <label for="password">Password:</label>
             <div class="input"><input type="password" id="password" name="password" required> </div>
             <br>
-            <a href="/frontend/1.html" class="button"><span class="bp">Login</span></a>
+            <a href="./Index.html" class="button"><span class="bp">Login</span></a>
 
 
         </form>
-        <p>Don't have an account? <a href="/frontend/register.html">Register here</a></p>
+        <p>Don't have an account? <a href="./register.html">Register here</a></p>
 
     </div>
     
