--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
             <label for="password">Password:</label>
             <div class="input">  <input type="password" id="password" name="password" required>   </div>
             <br>
-            <a href="./register.html" class="button"><span class="bp">Register</span></a>
+            <a href="./Index.html" class="button"><span class="bp">Register</span></a>
         </form>
         <p>Already have an account? <a href="./login.html">Login here</a></p>
 
