--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
         <div class="d-flex flex-wrap align-items-center gap-2">
           <div class="btn-group" role="group" aria-label="Filtros">
             <button data-filter="all" class="btn btn-outline-secondary">Todas</button>
-            <button data-filter="active" class="btn btn-outline-secondary">Activas</button>
+            <button data-filter="active" class="btn btn-outline-secondary">TypeScript </button>
             <button data-filter="done" class="btn btn-outline-secondary">Completadas</button>
           </div>
 
@@ -103,7 +103,8 @@
         <div class="card h-100 shadow-sm">
           <div class="card-body d-flex align-items-center justify-content-between">
             <div>
-              <div class="text-secondary small">Activas</div>
+              <div class="text-secondary small">TypeScript </div>
+              <img src="https://cdn.iconscout.com/icon/free/png-256/free-typescript-icon-svg-download-png-2945272.png?f=webp&w=256" alt="Banner principal" class="banner-principal img-fluid rounded mb-3">
               <div id="stat-active" class="h4 m-0">0</div>
             </div>
             <i class="bi bi-lightning-charge text-warning fs-4"></i>
@@ -115,6 +116,7 @@
           <div class="card-body d-flex align-items-center justify-content-between">
             <div>
               <div class="text-secondary small">Completadas</div>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXOsicNKYyhg1i_QmGXY-Kdn2WFbKQtTjZ7g&s" alt="Imagen2" class="Imagen2 img-fluid rounded mb-3">
               <div id="stat-done" class="h4 m-0">0</div>
             </div>
             <i class="bi bi-check2-circle text-success fs-4"></i>
@@ -125,7 +127,8 @@
         <div class="card h-100 shadow-sm">
           <div class="card-body d-flex align-items-center justify-content-between">
             <div>
-              <div class="text-secondary small">Total</div>
+              <div class="text-secondary small">Fallos</div>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzAgNmFnegivrDkZp4gCxviRq0AeKxyEvmFg&s" alt="Nueva Imagen" class="ImagenNueva img-fluid rounded mb-3">
               <div id="stat-total" class="h4 m-0">0</div>
             </div>
             <i class="bi bi-collection fs-4 text-primary"></i>
